# rosie_linear_navigator

./: CMakeLists.txt  README.md  navigator_params.yaml  package.xml
launch/: rosie_linear_navigator.launch
src/: linear_navigator_node.cpp
